# tellico

./: .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .krazy  .reviewboardrc  AUTHORS  Bookcase.kdevelop  Bookcase.kdevses  CMakeLists.txt  COMPILING  COPYING  ChangeLog  Doxyfile  ExtraDesktop.sh  Makefile.am  Makefile.in  Messages.sh  README  README.md  RELEASE  TODO  XmlMessages.sh  acinclude.m4  aclocal.m4  autogen.sh  bookcase.desktop  bookcase.doxygen  bookcase.dtd  bookcase.kdevprj  bookcase.kdevses  bookcase.kdoc  bookcase.lsm  bookcase.spec  bookcase.spec.in  bookcase.tips  config.guess  config.h.cmake  config.h.in  config.sub  (+25 more)
doc/en/: CMakeLists.txt  Makefile.am  Makefile.in  advanced.docbook  collections.docbook  configuration.docbook  details.docbook  faqs.docbook  fields.docbook  freebsd-doc-license.html  fundamentals.docbook  hacking.docbook  importing-exporting.docbook  index.docbook  menus.docbook
icons/: CMakeLists.txt  Makefile.am  Makefile.in  README.icons  README.quesnay  bookcase.xcf  bookcase2.xcf  bookcase3.xcf  bookcase4.xcf  icons.qrc
src/: .collectionfieldsdialog.cpp.kate-swp  CMakeLists.txt  Makefile.am  Makefile.in  bcattribute.cpp  bcattribute.h  bcattributewidget.cpp  bcattributewidget.h  bccollection.cpp  bccollection.h  bccollectionfactory.cpp  bccollectionfactory.h  bccollectionfieldsdialog.cpp  bccollectionfieldsdialog.h  bccollectionpropdialog.cpp  bccollectionpropdialog.h  bccollectionview.cpp  bccollectionview.h  bccolumnview.cpp  bccolumnview.h  bcdetailedlistview.cpp  bcdetailedlistview.h  bcexportdialog.cpp  bcexportdialog.h  bcfilehandler.cpp  bcfilehandler.h  bcfilter.cpp  bcfilter.h  bcfilterdialog.cpp  bcfilterdialog.h  bcgroupview.cpp  bcgroupview.h  bcimportdialog.cpp  bcimportdialog.h  bclabelaction.cpp  bclabelaction.h  bclistview.cpp  bclistview.h  bctabcontrol.cpp  bctabcontrol.h  (+201 more)
src/barcode/: CMakeLists.txt  Makefile.am  Makefile.in  barcode.cpp  barcode.h  barcode_v4l.cpp  barcode_v4l.h
src/charts/: CMakeLists.txt  barchart.cpp  barchart.h  chartmanager.cpp  chartmanager.h  chartreport.h  collectionsizereport.cpp  collectionsizereport.h  groupsummary.cpp  groupsummary.h  groupsummaryreport.cpp  groupsummaryreport.h  yeardistributionreport.cpp  yeardistributionreport.h
src/cite/: CMakeLists.txt  Makefile.am  Makefile.in  actionmanager.cpp  actionmanager.h  clipboard.cpp  clipboard.h  handler.h  lyxpipe.cpp  lyxpipe.h  openoffice.cpp  openoffice.h
src/collections/: CMakeLists.txt  Makefile.am  Makefile.in  bibtexattribute.h  bibtexcollection.cpp  bibtexcollection.h  boardgamecollection.cpp  boardgamecollection.h  bookcollection.cpp  bookcollection.h  cardcollection.cpp  cardcollection.h  coincollection.cpp  coincollection.h  collectioninitializer.cpp  collectioninitializer.h  comicbookcollection.cpp  comicbookcollection.h  filecatalog.cpp  filecatalog.h  gamecollection.cpp  gamecollection.h  musiccollection.cpp  musiccollection.h  stampcollection.cpp  stampcollection.h  videocollection.cpp  videocollection.h  winecollection.cpp  winecollection.h
src/commands/: CMakeLists.txt  Makefile.am  Makefile.in  addentries.cpp  addentries.h  addloans.cpp  addloans.h  collectioncommand.cpp  collectioncommand.h  fieldcommand.cpp  fieldcommand.h  filtercommand.cpp  filtercommand.h  group.cpp  group.h  modifyentries.cpp  modifyentries.h  modifyloans.cpp  modifyloans.h  removeentries.cpp  removeentries.h  removeloans.cpp  removeloans.h  renamecollection.cpp  renamecollection.h  reorderfields.cpp  reorderfields.h  updateentries.cpp  updateentries.h
src/config/: CMakeLists.txt  tellico-1-3-update.pl  tellico-3-4-update.pl  tellico.upd  tellico_config.kcfg  tellico_config.kcfgc  tellico_config_addons.cpp  tellico_config_addons.h
src/core/: CMakeLists.txt  Makefile.am  Makefile.in  dbusinterface.cpp  dbusinterface.h  dcopinterface.cpp  dcopinterface.h  dcopinterface_skel.cpp  drophandler.cpp  drophandler.h  filehandler.cpp  filehandler.h  logger.cpp  logger.h  netaccess.cpp  netaccess.h  tellico.upd  tellico_config.cpp  tellico_config.kcfg  tellico_config.kcfgc  tellico_config_addons.cpp  tellico_config_addons.h  tellico_strings.cpp  tellico_strings.h
src/fetch/: CMakeLists.txt  Makefile.am  Makefile.in  README.hmac  abstractbggfetcher.cpp  abstractbggfetcher.h  adsfetcher.cpp  adsfetcher.h  allocinefetcher.cpp  allocinefetcher.h  amazonfetcher.cpp  amazonfetcher.h  amazonrequest.cpp  amazonrequest.h  animenfofetcher.cpp  animenfofetcher.h  arxivfetcher.cpp  arxivfetcher.h  bedethequefetcher.cpp  bedethequefetcher.h  beyazperdefetcher.cpp  beyazperdefetcher.h  bibliosharefetcher.cpp  bibliosharefetcher.h  bibsonomyfetcher.cpp  bibsonomyfetcher.h  boardgamegeekfetcher.cpp  boardgamegeekfetcher.h  citebasefetcher.cpp  citebasefetcher.h  colnectfetcher.cpp  colnectfetcher.h  comicvinefetcher.cpp  comicvinefetcher.h  configwidget.cpp  configwidget.h  crossreffetcher.cpp  crossreffetcher.h  dbcfetcher.cpp  dbcfetcher.h  (+137 more)
src/gui/: CMakeLists.txt  Makefile.am  Makefile.in  boolfieldwidget.cpp  boolfieldwidget.h  checkablecombobox.cpp  checkablecombobox.h  choicefieldwidget.cpp  choicefieldwidget.h  collectiontemplatedialog.cpp  collectiontemplatedialog.h  collectiontemplatedialog.ui  collectiontypecombo.cpp  (+95 more)
xslt/: CMakeLists.txt  MARC21slim2MODS3.xsl  MARC21slimUtils.xsl  Makefile.am  Makefile.in  UNIMARC2MODS3.xsl  allocine2tellico.xsl  amazon2bookcase.xsl  amazon2tellico.xsl  arxiv2tellico.xsl  atom2tellico.xsl  bc.xsl  biblioshare2tellico.xsl  bibtexml2bookcase.xsl  bibtexml2tellico.xsl  boardgamegeek2tellico.xsl  bookcase-by-author.xsl  bookcase-by-title.xsl  bookcase-common.xsl  bookcase-printing.xsl  bookcase2bibtex.xsl  bookcase2bibtexml.xsl  bookcase2html.xsl  collectorz2tellico.xsl  comicvine2tellico.xsl  crossref2tellico.xsl  datacrow2tellico.xsl  dbc2tellico.xsl  dblp2tellico.xsl  delicious2tellico.xsl  discogs2tellico.xsl  douban2tellico.xsl  dvdfr2tellico.xsl  gcstar2tellico.xsl  giantbomb2tellico.xsl  goodreads2tellico.xsl  googlebook2tellico.xsl  griffith2tellico.xsl  isbndb2tellico.xsl  isfdb2tellico.xsl  (+24 more)
(+1028 files in other folders)
